// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code actions should disable rules for a specific line with a comment on the previous line 1`] = `
"a {
  /* ec0lint-style-disable-next-line indentation */
  font-size: 1.2em;
    /* ec0lint-style-disable-next-line comment-no-empty */
  color: #00;
}
"
`;

exports[`Code actions should disable rules for a specific line with a comment on the same line 1`] = `
"a {
  font-size: 1.2em; /* ec0lint-style-disable-line indentation */
    /* ec0lint-style-disable-next-line comment-no-empty */
  color: #00;
}
"
`;

exports[`Code actions should disable rules for an entire file 1`] = `
"/* ec0lint-style-disable indentation */
a {
  font-size: 1.2em;
    /* ec0lint-style-disable-next-line comment-no-empty */
  color: #00;
}
"
`;

exports[`Code actions should disable rules for an entire file with a shebang 1`] = `
"#!/usr/bin/env node
/* ec0lint-style-disable color-no-invalid-hex */
/* eslint-disable node/shebang */
'use strict';

const css = css\`
	.foo {
		color: #00;
	}
\`;
"
`;

exports[`Code actions should provide code actions for problems 1`] = `
Array [
  Object {
    "edit": Array [
      Array [
        "<uri>",
        Array [
          Object {
            "newEol": undefined,
            "newText": "  /* ec0lint-style-disable-next-line indentation */
",
            "range": Array [
              Object {
                "character": 0,
                "line": 1,
              },
              Object {
                "character": 0,
                "line": 1,
              },
            ],
          },
        ],
      ],
    ],
    "isPreferred": undefined,
    "kind": s {
      "value": "quickfix",
    },
    "title": "Disable indentation for this line",
  },
  Object {
    "edit": Array [
      Array [
        "<uri>",
        Array [
          Object {
            "newEol": undefined,
            "newText": "/* ec0lint-style-disable indentation */
",
            "range": Array [
              Object {
                "character": 0,
                "line": 0,
              },
              Object {
                "character": 0,
                "line": 0,
              },
            ],
          },
        ],
      ],
    ],
    "isPreferred": undefined,
    "kind": s {
      "value": "quickfix",
    },
    "title": "Disable indentation for the entire file",
  },
  Object {
    "command": Object {
      "arguments": Array [
        Object {
          "uri": "https://stylelint.io/user-guide/rules/list/indentation",
        },
      ],
      "command": "stylelint.openRuleDoc",
      "title": "Open documentation for indentation",
    },
    "isPreferred": undefined,
    "kind": s {
      "value": "quickfix",
    },
    "title": "Show documentation for indentation",
  },
]
`;
